--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,12 @@
         "davidhsianturi/blade-bootstrap-icons": "^1.5",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
+        "laravel/ui": "^4.6",
         "opcodesio/log-viewer": "^3.12"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
+        "laravel/breeze": "*",
         "laravel/pail": "^1.1",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.26",
